{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 70,
  "lineage": "855ad3de-3484-36c9-8100-75dcdb99f2aa",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "auth_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 10,
            "creation_timestamp": "2025-06-27T05:49:55.299-07:00",
            "enable_cdn": false,
            "fingerprint": "zYDEBFkisf8=",
            "generated_id": 2134432967738731932,
            "health_checks": [
              "projects/movie-app-464210/global/healthChecks/movie-app-auth-health-check"
            ],
            "id": "projects/movie-app-464210/global/backendServices/movie-app-auth-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "movie-app-auth-backend",
            "port_name": "http",
            "project": "movie-app-464210",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/backendServices/movie-app-auth-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.auth_health_check"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 10,
            "creation_timestamp": "2025-06-27T05:49:55.300-07:00",
            "enable_cdn": false,
            "fingerprint": "S5Q7TG35xzU=",
            "generated_id": 8615182040627883420,
            "health_checks": [
              "projects/movie-app-464210/global/healthChecks/movie-app-health-check"
            ],
            "id": "projects/movie-app-464210/global/backendServices/movie-app-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "movie-app-backend-service",
            "port_name": "http",
            "project": "movie-app-464210",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/backendServices/movie-app-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.health_check"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "cinema_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 10,
            "creation_timestamp": "2025-06-27T05:49:55.032-07:00",
            "enable_cdn": false,
            "fingerprint": "2SVd26fdGu8=",
            "generated_id": 4063267870878150045,
            "health_checks": [
              "projects/movie-app-464210/global/healthChecks/movie-app-cinema-health-check"
            ],
            "id": "projects/movie-app-464210/global/backendServices/movie-app-cinema-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "movie-app-cinema-backend",
            "port_name": "http",
            "project": "movie-app-464210",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/backendServices/movie-app-cinema-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.cinema_health_check"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "movie_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 10,
            "creation_timestamp": "2025-06-27T05:49:55.029-07:00",
            "enable_cdn": false,
            "fingerprint": "-yMIw-_NjpA=",
            "generated_id": 1417734467999706525,
            "health_checks": [
              "projects/movie-app-464210/global/healthChecks/movie-app-movie-health-check"
            ],
            "id": "projects/movie-app-464210/global/backendServices/movie-app-movie-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "movie-app-movie-backend",
            "port_name": "http",
            "project": "movie-app-464210",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/backendServices/movie-app-movie-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.movie_health_check"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "reservation_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 10,
            "creation_timestamp": "2025-06-27T05:49:54.848-07:00",
            "enable_cdn": false,
            "fingerprint": "Xv-DI44mn0k=",
            "generated_id": 913030902541659549,
            "health_checks": [
              "projects/movie-app-464210/global/healthChecks/movie-app-reservation-health-check"
            ],
            "id": "projects/movie-app-464210/global/backendServices/movie-app-reservation-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "movie-app-reservation-backend",
            "port_name": "http",
            "project": "movie-app-464210",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/backendServices/movie-app-reservation-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.reservation_health_check"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "user_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 10,
            "creation_timestamp": "2025-06-27T05:49:55.571-07:00",
            "enable_cdn": false,
            "fingerprint": "yKr9sGhPrqo=",
            "generated_id": 2412174810415312284,
            "health_checks": [
              "projects/movie-app-464210/global/healthChecks/movie-app-user-health-check"
            ],
            "id": "projects/movie-app-464210/global/backendServices/movie-app-user-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "movie-app-user-backend",
            "port_name": "http",
            "project": "movie-app-464210",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/backendServices/movie-app-user-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.user_health_check"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-27T05:17:47.622-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/movie-app-464210/global/firewalls/movie-app-allow-http-https",
            "log_config": [],
            "name": "movie-app-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/networks/movie-app-vpc",
            "priority": 1000,
            "project": "movie-app-464210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/firewalls/movie-app-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server",
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.required_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-06-27T05:17:47.639-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/movie-app-464210/global/firewalls/movie-app-allow-internal",
            "log_config": [],
            "name": "movie-app-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/networks/movie-app-vpc",
            "priority": 1000,
            "project": "movie-app-464210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/firewalls/movie-app-allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.required_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.160.148.110",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-06-27T05:17:14.065-07:00",
            "id": "projects/movie-app-464210/global/addresses/movie-app-external-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "movie-app-external-ip",
            "prefix_length": 0,
            "project": "movie-app-464210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/addresses/movie-app-external-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.91.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-06-27T05:17:47.630-07:00",
            "id": "projects/movie-app-464210/global/addresses/movie-app-private-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "movie-app-private-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/networks/movie-app-vpc",
            "prefix_length": 16,
            "project": "movie-app-464210",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/addresses/movie-app-private-ip"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.required_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/movie-app-464210/global/forwardingRules/movie-app-http-forwarding-rule",
            "ip_address": "34.160.148.110",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "movie-app-http-forwarding-rule",
            "port_range": "80-80",
            "project": "movie-app-464210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/forwardingRules/movie-app-http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/targetHttpProxies/movie-app-http-proxy"
          },
          "dependencies": [
            "google_compute_global_address.external_ip",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.redirect_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/movie-app-464210/global/forwardingRules/movie-app-https-forwarding-rule",
            "ip_address": "34.160.148.110",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "movie-app-https-forwarding-rule",
            "port_range": "443-443",
            "project": "movie-app-464210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/forwardingRules/movie-app-https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/targetHttpsProxies/movie-app-https-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.auth_backend_service",
            "google_compute_backend_service.backend_service",
            "google_compute_backend_service.cinema_backend_service",
            "google_compute_backend_service.movie_backend_service",
            "google_compute_backend_service.reservation_backend_service",
            "google_compute_backend_service.user_backend_service",
            "google_compute_global_address.external_ip",
            "google_compute_health_check.auth_health_check",
            "google_compute_health_check.cinema_health_check",
            "google_compute_health_check.health_check",
            "google_compute_health_check.movie_health_check",
            "google_compute_health_check.reservation_health_check",
            "google_compute_health_check.user_health_check",
            "google_compute_managed_ssl_certificate.ssl_cert",
            "google_compute_target_https_proxy.https_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/movie-app-464210/global/networks/movie-app-vpc",
            "mtu": 0,
            "name": "movie-app-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1822998103057446202",
            "project": "movie-app-464210",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/networks/movie-app-vpc"
          },
          "dependencies": [
            "google_project_service.required_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "gke_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-27T05:17:48.477-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/movie-app-464210/regions/us-central1/subnetworks/movie-app-gke-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "movie-app-gke-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/networks/movie-app-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "movie-app-464210",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/16",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/regions/us-central1/subnetworks/movie-app-gke-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.required_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-27T05:17:37.253-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/movie-app-464210/global/targetHttpProxies/movie-app-http-proxy",
            "name": "movie-app-http-proxy",
            "project": "movie-app-464210",
            "proxy_bind": false,
            "proxy_id": 4291811893971203342,
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/targetHttpProxies/movie-app-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/urlMaps/movie-app-redirect-url-map"
          },
          "dependencies": [
            "google_compute_url_map.redirect_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-27T05:50:50.000-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/movie-app-464210/global/targetHttpsProxies/movie-app-https-proxy",
            "name": "movie-app-https-proxy",
            "project": "movie-app-464210",
            "proxy_bind": false,
            "proxy_id": 5387430687944158534,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/targetHttpsProxies/movie-app-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/sslCertificates/movie-app-ssl-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/urlMaps/movie-app-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.auth_backend_service",
            "google_compute_backend_service.backend_service",
            "google_compute_backend_service.cinema_backend_service",
            "google_compute_backend_service.movie_backend_service",
            "google_compute_backend_service.reservation_backend_service",
            "google_compute_backend_service.user_backend_service",
            "google_compute_health_check.auth_health_check",
            "google_compute_health_check.cinema_health_check",
            "google_compute_health_check.health_check",
            "google_compute_health_check.movie_health_check",
            "google_compute_health_check.reservation_health_check",
            "google_compute_health_check.user_health_check",
            "google_compute_managed_ssl_certificate.ssl_cert",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "redirect_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-27T05:17:25.657-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "8DW9OkX2Ass=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/movie-app-464210/global/urlMaps/movie-app-redirect-url-map",
            "map_id": 5136863558615905594,
            "name": "movie-app-redirect-url-map",
            "path_matcher": [],
            "project": "movie-app-464210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/urlMaps/movie-app-redirect-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-27T05:50:37.869-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/backendServices/movie-app-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "1loGLLBRX2c=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "movie-app.maximilien-bey.com"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/movie-app-464210/global/urlMaps/movie-app-url-map",
            "map_id": 2698053670497627506,
            "name": "movie-app-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/backendServices/movie-app-backend-service",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/auth/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/backendServices/movie-app-auth-backend",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/api/users/*",
                      "/users/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/backendServices/movie-app-user-backend",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/api/movies/*",
                      "/movies/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/backendServices/movie-app-movie-backend",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/api/cinemas/*",
                      "/cinemas/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/backendServices/movie-app-cinema-backend",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/api/reservations/*",
                      "/reservations/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/backendServices/movie-app-reservation-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "movie-app-464210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-app-464210/global/urlMaps/movie-app-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.auth_backend_service",
            "google_compute_backend_service.backend_service",
            "google_compute_backend_service.cinema_backend_service",
            "google_compute_backend_service.movie_backend_service",
            "google_compute_backend_service.reservation_backend_service",
            "google_compute_backend_service.user_backend_service",
            "google_compute_health_check.auth_health_check",
            "google_compute_health_check.cinema_health_check",
            "google_compute_health_check.health_check",
            "google_compute_health_check.movie_health_check",
            "google_compute_health_check.reservation_health_check",
            "google_compute_health_check.user_health_check"
          ]
        }
      ]
    }
  ]
}